Added validation to the post, and put endpoints.
